--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,3 +1,7 @@
+#portfolio {
+    height: 120vh;
+}
+
 #portfolio h2 {
     text-align: center;
     color: var(--color-primary);
@@ -15,7 +19,7 @@
 }
 
 .portfolio__item-image img {
-    max-width: 300px;
+    width: 100%;
     overflow: hidden;
     border-radius: 10px;
     margin-bottom: 2rem;
